--- a/App_LocalResources/View.ascx.resx
+++ b/App_LocalResources/View.ascx.resx
@@ -133,6 +133,6 @@
     <value>Edit</value>
   </data>
   <data name="EditModule.Text" xml:space="preserve">
-    <value>Add Item</value>
+    <value>Edit Items</value>
   </data>
 </root>
